[package]
name = "leven"
version = "0.1.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
description = "Make your own blog!"
repository = "https://github.com/quadrupleslap/leven"
license = "MIT"

[dependencies]
badlog = "0.3"
chrono = "0.4"
clap = "2.26"
error-chain = "0.11"
glob = "0.2"
handlebars = "0.29"
log = "0.3"
pulldown-cmark = "0.1"
serde_json = "1.0"
slug = "0.1"
